--- a/style.css
+++ b/style.css
@@ -13,7 +13,11 @@
 }
 
 #bigcontainer {
-
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     display: flex;
     width: 500px;
     
